--- a/xoStyle.css
+++ b/xoStyle.css
@@ -7,6 +7,7 @@ header{
         height: 10%;
         display: flex;
         justify-content:space-between;
+        background-color: #4ed6d6;
     }
    
  .title{
